added validation when creating a post, and added app version api path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 # Set page size to only 8 posts
 spring.data.rest.default-page-size=8
+
+# set api version path
+spring.data.rest.basePath = /api/v1
